# gpt-anki

./: .env.example  .gitignore  Makefile  README.md  noxfile.py  pyproject.toml  requirements.txt
csv/: java_deck.csv
decks/: java.anki  java.apkg
src/: generate_deck.py  generate_flashcards.py  gpt.py  input.txt  main.py  prompt.txt  test.py
